Added review distribution example popup
To help better describe the function of the distribution sliders, a
popup describing two use cases was added on mouse-over of the control
title (which is now colored blue).

--- a/Controls/ScoreDistributionControl.xaml
+++ b/Controls/ScoreDistributionControl.xaml
@@ -17,6 +17,9 @@
         </Grid.RowDefinitions>
         
         <TextBlock
+            Name="ControlTitle"
+            Cursor="Help"
+            Foreground="Blue"
             Style="{StaticResource TextBlockStyle}"
             FontSize="{x:Static local:Constants.DEFAULT_LARGE_TEXT_SIZE}" >
             Result Percentage per star category
