Multithreaded milestone build
First "major" update!

- Application now multithreaded! New constant added that allows you to
specify how many threads you'd like to use (how many pages of search
results the application should concurrently load/parse)
- Tabbing to textbox controls now selects contents
- Added more default control settings to Constants.cs (and added
properties to RangeBoxes to support defaults)
- Replaced Console.WriteLine calls with Debug.WriteLine
- Made generic RegEx match methods used by all parser calls
- Naming corrections (removed the X in TextBoxPlusX, renamed
CancelScrapeWorker to CancelSearch, etc.)
- Added / corrected / updated comments
- Removed unnecessary Dispatch calls when modifying UI from
SearchManager
- Actually using assembly version numbers now (doh). Considering this
build. 1.1.0.0
- Reorganized the project folder structure:

Model holds domain-specific classes (logic and structure)
Structure represents container or structural definition
classes/interfaces
Logic contains objects that perform work

UI contains the main window xaml, control definitions, and UI resources
like images and styles
Controls - extended and composite WPF controls
Resources - control style definitions, UI images (icon, prime logo), and
the resource loader
[the main window sits in the root of this folder]

UtilityClasses are convenience classes that provide functionality to
base data types

--- a/UI/Controls/RangeBoxes.xaml
+++ b/UI/Controls/RangeBoxes.xaml
@@ -28,7 +28,7 @@
         x:Name="TextLow"
         Grid.Column="1"
         IsNumericOnly="True"
-        Style="{StaticResource TextBoxPlusXStyle}"/>
+        Style="{StaticResource TextBoxPlusStyle}"/>
 
         <TextBlock
             Grid.Column="2"
@@ -40,7 +40,7 @@
             x:Name="TextHigh"            
             Grid.Column="3"
             IsNumericOnly="True"
-            Style="{StaticResource TextBoxPlusXStyle}"/>
+            Style="{StaticResource TextBoxPlusStyle}"/>
         
     </Grid>
     
