--- a/App.xaml
+++ b/App.xaml
@@ -1,11 +1,11 @@
 ﻿<Application x:Class="AmazonScrape.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="UI/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/ControlStyles.xaml"/>
+                <ResourceDictionary Source="UI/Resources/ControlStyles.xaml"/>
                 <!-- TODO: put static resources (images) here as well -->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
